--- a/TWHelp/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TWHelp/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,35 +9,14 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row d-flex flex-column">
     <div class="col-md-6">
-        <form method="post" id="changePhotoForm" enctype="multipart/form-data">
-            <img src="@Model.ConvertedPhoto" width="300" height="300" />
-
-            @if(Model.IsPsychologist)
-            {
-                <h3>You are psychologist</h3>
-            }
-
-            <h4>Profile picture</h4>
-
-            <div class="form-group">
-                <p>Upload a profile picture using this form:</p>
-                <small>Allowed formats: .png, .jpg or .jpeg</small>
-                <input id="inputFile" type="file" name="photo" multiple>
-            </div>
-
-            <div class="form-group d-flex justify-content-between">
-                <button id="update-profile-button" type="submit" asp-page-handler="PhotoUpdate" class="btn btn-primary">Upload</button>
-                <button id="update-profile-button" type="submit" asp-page-handler="PhotoDelete" class="btn btn-dark">Delete photo</button>
-            </div>
-        </form>
-    </div>
-    <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+            
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="Input.NickName"></label>
+                <input asp-for="Input.NickName" class="form-control" />
             </div>
+
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 @if (Model.IsEmailConfirmed)
@@ -54,31 +33,39 @@
                 }
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+
+            @if (Model.IsPsychologist)
+            {
+                <div class="form-group">
+                    <label asp-for="Input.Education"></label>
+                    <input asp-for="Input.Education" class="form-control" />
+                    <span asp-validation-for="Input.Education" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Input.WorkExperience"></label>
+                    <input asp-for="Input.WorkExperience" class="form-control" />
+                    <span asp-validation-for="Input.WorkExperience" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Input.AreaOfExpertise"></label>
+                    <input asp-for="Input.AreaOfExpertise" class="form-control" />
+                    <span asp-validation-for="Input.AreaOfExpertise" class="text-danger"></span>
+                </div>
+            }
+
+            <button id="update-profile-button" type="submit" class="btn btn-primary my-2">Save</button>
         </form>
     </div>
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-
-    <script>
-        document.getElementById('update-profile-button').onclick = function () {
-            let fname = document.getElementById('inputFile').value; 
-            let re = /(\.jpg|\.jpeg|\.bmp|\.png)$/i;
-
-            if (!re.exec(fname))
-            {
-                alert("File extension not supported!");
-
-                return false;
-            }
-        }
-    </script>
-
 }
