--- a/TWHelp/Areas/Roles/Pages/Index.cshtml
+++ b/TWHelp/Areas/Roles/Pages/Index.cshtml
@@ -1,6 +1,34 @@
 ﻿@page
+@using Microsoft.AspNetCore.Identity;
 @model TWHelp.Areas.Roles.Pages.IndexModel
 @{
 }
 
-    <h3>Roles</h3>
+<h3>Roles</h3>
+
+<div class="row">
+    <div class="col-11 col-sm-10 col-md-8 col-xl-6">
+
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <td>Role name</td>
+                <td>Number of users with this role</td>
+            </tr>
+        </thead>
+        <tbody id="container">
+
+        </tbody>
+    </table>
+</div>
+
+<template id="role-template">
+    <tr>
+        <td style="display: none"><input type="hidden" name="role-id" value="" /></td>
+        <td><p id="role-name"></p></td>
+        <td><p id="role-count"></p></td>
+        <td><button>Delete this role</button></td>
+        <td><button>Edit this role</button></td>
+    </tr>
+</template>
