Implement prediction model API on client side. Implement user interface for entering data to search

--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Profiles" asp-page="/Psychologists/Index">Psychologists</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Analytics" asp-page="/Index">Analytics</a>
+                            </li>
                         }
                         @if(User.IsInRole("admin"))
                         {
