Users tab added in nav-bar

--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,6 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="/css/site.css" />
-
     @*font awesome*@
     <script src="https://kit.fontawesome.com/a1fd5ee0cf.js" crossorigin="anonymous"></script>
 </head>
@@ -40,6 +39,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Home" asp-page="/Index">Home</a>
                         </li>
+                        @if (SignInManager.IsSignedIn(User) && (User.IsInRole("psychologist") || User.IsInRole("admin")))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Profiles" asp-page="/Users/Index">Users</a>
+                            </li>
+                        }
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
@@ -49,30 +54,30 @@
                                 <a class="nav-link text-dark" asp-area="Analytics" asp-page="/Index">Analytics</a>
                             </li>
                         }
-                        @if(User.IsInRole("admin"))
+                        @if (User.IsInRole("admin"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
                             </li>
                         }
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
-                        </li>*@
+            <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
+        </li>*@
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Forum">Forum</a>
-                        </li>
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tests">Tests</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Specialists" asp-route-roleName="specialist">Specialists</a>
-                            </li>
-                        }*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Forum">Forum</a>
+        </li>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tests">Tests</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Specialists" asp-route-roleName="specialist">Specialists</a>
+            </li>
+        }*@
                     </ul>
                 </div>
             </div>
