--- a/TWHelp/Areas/Profiles/Pages/Psychologists/Index.cshtml
+++ b/TWHelp/Areas/Profiles/Pages/Psychologists/Index.cshtml
@@ -99,7 +99,7 @@
 </style>
 
 <script>
-    const webRoot = 'http://' + '@Model.WebRoot';
+    const webRoot = '@Model.WebRoot';
     const isPsycho = '@Model.IsUserPsycho';
 
     window.onload = function () {
