--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     @*<script src="https://kit.fontawesome.com/a1fd5ee0cf.js" crossorigin="anonymous"></script>*@
 
     @RenderSection("Header", false)
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
@@ -56,8 +57,18 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Analytics" asp-page="/Index">Analytics</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Forum" asp-page="/Index">Forum</a>
+                            <li>
+                                <div class="dropdown show">
+                                    <a class="btn dropdown-toggle" style="padding: 8px 12px;" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Forum
+                                    </a>
+
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/Index">Questions & answers</a>
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/VideoFeed">Video feed</a>
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/UploadVideo">Upload video</a>
+                                    </div>
+                                </div>
                             </li>
                         }
                         @if (User.IsInRole("admin"))
@@ -66,24 +77,6 @@
                                 <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
                             </li>
                         }
-                        @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
-                            </li>*@
-                        @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Forum">Forum</a>
-                            </li>
-                            @if (SignInManager.IsSignedIn(User))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tests">Tests</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Specialists" asp-route-roleName="specialist">Specialists</a>
-                                </li>
-                            }*@
                     </ul>
                 </div>
             </div>
