--- a/TWHelp/Areas/Forum/Pages/UploadVideo.cshtml
+++ b/TWHelp/Areas/Forum/Pages/UploadVideo.cshtml
@@ -18,6 +18,21 @@
                 </div>
                 <div class="my-2 my-sm-4 my-md-5 custom-file">
 
+                    <div class="form-group">
+                        <label asp-for="InputModel.Name">Video name</label>
+                        <input asp-for="InputModel.Name" type="text" class="form-control" id="name" placeholder="How to fight loneliness">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="InputModel.Description" for="exampleInputEmail2">Video description</label>
+                        <input asp-for="InputModel.Description" type="text" class="form-control" id="description" placeholder="Long and very detailed video">
+                        <small id="emailHelp" class="form-text text-muted">Description can be empty.</small>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="InputModel.Tags" for="exampleInputEmail3">Video tags</label>
+                        <input asp-for="InputModel.Tags" type="text" class="form-control" id="tags" placeholder="Psychology, good quality, education">
+                        <small id="emailHelp" class="form-text text-muted">Enter tags separating them with a comma.</small>
+                    </div>
+
                     <form asp-page-handler="FileUpload" class="dropzone py-2 py-sm-4 py-md-5" id="my-awesome-dropzone" enctype="multipart/form-data">
                     </form>
 
@@ -25,7 +40,6 @@
                         <small class="m-1" style="color: #ff5252;">You can upload only .avi or .mp4 video format</small>
                         <small class="m-1" style="color: #ff5252;">Video max size is <span style="font-weight: bold">700mb</span></small>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -36,12 +50,28 @@
     @*https://www.dropzonejs.com/*@
     <script src="~/lib/dropzone/dropzone.js"></script>
     <script>
+        data = {
+            name: '',
+            description: '',
+            tags: ''
+        };
+
         Dropzone.options.myAwesomeDropzone = {
             paramName: "file", // The name that will be used to transfer the file
             maxFilesize: 700, // MB
+            acceptedFiles: "video/*",
+            params: data,
             accept: function (file, done) {
                 if (true || file.name.endsWith(".avi") || file.name.endsWith(".mp4")) {
+                    data.name = $('#name').val();
+                    data.description = $('#description').val();
+                    data.tags = $('#tags').val();;
+
                     done();
+
+                    $('#name').val('');
+                    $('#description').val('');
+                    $('#tags').val('');
                 }
                 else {
                     done("Oops, wrong video format");
