--- a/TWHelp/Areas/Forum/Pages/VideoFeed.cshtml
+++ b/TWHelp/Areas/Forum/Pages/VideoFeed.cshtml
@@ -3,96 +3,156 @@
 @{
 }
 
-    <div class="container-fluid" style="background-color: lightblue;">
-        <div class="m-3 p-3">
-            <div class="container" style="background-color: lightcoral;">
+@section Styles {
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+}
 
-
-
-                <div class="" style="background-color: lightgoldenrodyellow;">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        </ol>
-                        <div class="carousel-inner" style="background-color: lightgreen">
-                            <div class="carousel-item active">
-                                <div style="background-color: lightgray;">
-                                    <div class="d-flex flex-row justify-content-around">
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
+<div class="container-fluid">
+    <div class="mx-1 my-3 py-3 px-1">
+        <div class="row">
+            
+            <div class="col-12 col-md-9 col-lg-8 col-xl-7 mx-auto">
+                <div>
+                    <div id="video-area" class="p-1" style="font-family: 'Montserrat', sans-serif; background-color: #ededed;">
+                        <div class="d-flex flex-column">
+                            <div class="text-center">
+                                <h5>Oops, unfortunately somethind went wrong</h5>
                             </div>
-                            <div class="carousel-item">
-                                <div style="background-color: lightgray;">
-                                    <div class="d-flex flex-row justify-content-around">
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-
-                                        <div>
-                                            <div>
-                                                <img src="https://picsum.photos/250/350" alt="Alternate Text" />
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
+                            <div class="mx-auto">
+                                <img src="~/images/svg/not-found.svg" alt="Alternate Text" width="600" height="400" />
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="background-color: aqua;">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" style="background-color: aqua; width: 20px;">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
 
-
+                    <div class="d-flex justify-content-between p-2">
+                        <button class="btn btn-primary m-1" onclick="pageBack()">Previous</button>
+                        <button class="btn btn-primary m-1" onclick="pageNext()">Next</button>
+                    </div>
                 </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<template id="template">
+    <div id="video-container" class="m-3 p-3" style="background-color: #fafafa; background-color: white;">
+        <div class="p-2">
+            <h4 style=" font-weight: bold;" id="video-name">Cool name with a lot of text and red color</h4>
+        </div>
+        <div class="d-flex flex-column flex-md-row ">
+            <div>
+                <div>
+                    <img id="video-image" src="~/images/video-preview/video-preview-2.svg" alt="profile-image" class="" width="200" height="200">
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-wrap flex-lg-nowrap p-2">
+                <div>
+                    <p id="video-description">
+                        A lot of text about this fancy video and how it can help you.
+                        And also some description of it contents and anythin else.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+                <div>
+                    <a class="btn btn-outline-success" id="video-link" href="#">Watch it now</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="d-flex flex-wrap" id="video-tags">
+            <h5><span class="badge badge-primary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-secondary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-secondary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-secondary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-success m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-success m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-danger m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-danger m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-warning m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-warning m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-primary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-primary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-primary m-1 p-2">Primary</span></h5>
+            <h5><span class="badge badge-primary m-1 p-2">Primary</span></h5>
+        </div>
+        <div class="d-flex flex-column m-1 p-1">
+            <div>
+                <p class="m-0">Video was uploaded <span id="video-date">12.12.2019</span> at <span id="video-time">12:40</span></p>
+            </div>
+            <div>
+                <p class="m-0">Author: <span id="video-author">test@gmail.com</span></p>
             </div>
         </div>
     </div>
+</template>
+
+<script>
+    window.onload = function () {
+        findVideos();
+    }
+
+    const webRoot = '@Model.WebRoot';
+    const userId = '@Model.UserId';
+
+    let from = 0;
+    let to = 10; 
+
+    async function findVideos() {
+        await fetch(webRoot + '/api/video/last/' + userId + '?from=' + from + '&to=' + to, {
+            method: 'GET'
+        })
+            .then(response => response.json())
+            .then(data => _displayVideos(data))
+            .catch(error => console.error('Unable to get items.', error));
+    }
+
+    function pageBack() {
+        if (from >= 10) {
+            from -= 10;
+            to -= 10;
+
+            findVideos();
+        }
+    }
+
+    function pageNext() {
+        from += 10;
+        to += 10;
+
+        findVideos();
+    }
+
+    function getRandomInt(max) {
+      return Math.floor(Math.random() * Math.floor(max)) + 1;
+    }
+
+    const badges = ['primary', 'secondary', 'success', 'warning', 'info']
+
+    function _displayVideos(data) {
+        const container = document.getElementById('video-area');
+        container.innerHTML = '';
+
+        data.forEach(item => {
+            let newDiv = document.importNode(template.content, true);
+
+            newDiv.getElementById('video-name').textContent = item.name;
+            newDiv.getElementById('video-description').textContent = item.description;
+            newDiv.getElementById('video-link').href = "/Forum/WatchVideo?id=" + item.forumVideoId;
+            newDiv.getElementById('video-image').src = '../images/video-preview/video-preview-' + getRandomInt(9) + ".svg";
+
+            newDiv.getElementById('video-tags').innerHTML = '';
+            item.tags.forEach(tag => {
+                newDiv.innerHTML += '<h5><span class="badge badge-'+ badges[getRandomInt(5)] +' m-1 p-2">' + tag + '</span></h5>'
+            })
+
+            newDiv.getElementById('video-date').textContent = item.createdDateString;
+            newDiv.getElementById('video-time').textContent = item.createdTimeString;
+            newDiv.getElementById('video-author').textContent = item.userName;
+
+            container.append(newDiv);
+        })
+    }
+</script>
