Add view-topic page

--- a/TWHelp/Areas/Forum/Pages/CreateTopic.cshtml
+++ b/TWHelp/Areas/Forum/Pages/CreateTopic.cshtml
@@ -13,7 +13,7 @@
                     </div>
                     <div class="m-2">
                         <form method="post">
-                            <div class="form-group d-flex">
+                            <div class="form-group d-flex flex-column">
                                 <span asp-validation-for="Input.Title" style="color: red;"></span>
                                 <span asp-validation-for="Input.Description" style="color: red;"></span>
                             </div>
