--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -64,7 +64,8 @@
                                     </a>
 
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/Index">Questions & answers</a>
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/Index">All questions</a>
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/CreateTopic">Ask question</a>
                                         <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/VideoFeed">Video feed</a>
                                         <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/UploadVideo">Upload video</a>
                                     </div>
